--- a/src/edison_config.service
+++ b/src/edison_config.service
@@ -3,7 +3,7 @@ Description=The Edison status and configuration service
 After=mdns.service
 
 [Service]
-ExecStart=/bin/su root -c 'node /usr/lib/edison_config_tools/edison-config-server.js'
+ExecStart=/usr/bin/node /usr/lib/edison_config_tools/edison-config-server.js
 Restart=always
 RestartSec=10s
 Environment=NODE_ENV=production
